Flashcard_game_coming_along
most of the data, just working on format and randomize and a single card display

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="app">
+  <div id="app" class="app">
 
+    <div class="question-area">
+        <h1>Welcome to CS1101 Vocabulary</h1>
+        <h3>Your score is: <span id="score-display"></span></h3>
+        <div class="questions" id="question-display"></div>
+      </div>
 
-    
   </div>
+  <!-- <script src="app.js"></script> === Alt way to bring in js file -->
 </body>
 </html>
